- Emotes: add a few missing emotes and show its names on hover