@@ -10,5 +10,5 @@
   "requires" : [],
   "steamContentId" : "3208917628",
   "tags" : "User Interface",
-  "version" : "1.7.10"
+  "version" : "1.7.11"
 }
