@@ -1,1 +1,1 @@
-["mainchat", "autohide", "colors", "stickers", "afk", "voicechat", "reactions"]
+["mainchat", "autohide", "colors", "sounds", "stickers", "afk", "voicechat", "reactions"]
